--- a/DateRangePicker/package.json
+++ b/DateRangePicker/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "total-fraudulent-transactions-widget",
+    "name": "date-range-picker-widget",
     "version": "1.0.0",
     "private": true,
     "dependencies": {
@@ -8,16 +8,14 @@
         "css-loader": "^1.0.0",
         "lodash": "^4.17.10",
         "material-ui": "^0.20.1",
+        "material-ui-pickers": "^1.0.0-rc.11",
         "react": "^16.4.1",
         "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^16.4.1",
-        "react-vizgrammar": "^0.7.14",
-        "rimraf": "^2.6.2",
         "style-loader": "^0.21.0",
-        "victory": "^0.27.2"
+        "date-fns": "2.0.0-alpha.7"
     },
     "scripts": {
-        "clean": "rimraf dist",
         "build": "webpack -p",
         "dev": "NODE_ENV=development webpack -d --config webpack.config.js --watch"
     },
