--- a/FraudGraph/package.json
+++ b/FraudGraph/package.json
@@ -11,10 +11,12 @@
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
         "react-vizgrammar": "^0.7.14",
+        "rimraf": "^2.6.2",
         "style-loader": "^0.21.0",
         "victory": "^0.27.2"
     },
     "scripts": {
+        "clean": "rimraf dist",
         "build": "webpack -p",
         "dev": "NODE_ENV=development webpack -d --config webpack.config.js --watch"
     },
