--- a/TotalPaymentTransactions/package.json
+++ b/TotalPaymentTransactions/package.json
@@ -12,10 +12,12 @@
         "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^16.4.1",
         "react-vizgrammar": "^0.7.14",
+        "rimraf": "^2.6.2",
         "style-loader": "^0.21.0",
         "victory": "^0.27.2"
     },
     "scripts": {
+        "clean": "rimraf dist",
         "build": "webpack -p",
         "dev": "NODE_ENV=development webpack -d --config webpack.config.js --watch"
     },
