--- a/AverageTransactionAmount/package.json
+++ b/AverageTransactionAmount/package.json
@@ -29,10 +29,10 @@
         "babel-preset-react": "^6.24.1",
         "babel-register": "^6.26.0",
         "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
         "node-sass": "^4.9.0",
         "sass-loader": "^6.0.7",
-        "webpack": "^3.12.0",
         "style-loader": "^0.21.0",
-        "css-loader": "^1.0.0"
+        "webpack": "^3.12.0"
     }
 }
